--- a/index.html
+++ b/index.html
@@ -21,5 +21,24 @@
      <button class="btn-primary">contact</button>
      </div>
 </header>
+<!-- hero section -->
+<section>
+    <div class="container">
+        <div class="event">
+            <div class="event-box">
+                <h2>See it in action</h2>
+                <p>Explore the live review and imagine your brand in this bold new look</p>
+                <button>Explore</button>
+            </div>
+
+            <div class="event-box">
+                <img src="./images/laptop.jpg" alt="">
+            </div>
+
+        </div>
+
+    </div>
+</section>
+
 </body>
 </html>
