--- a/index.html
+++ b/index.html
@@ -40,5 +40,31 @@
     </div>
 </section>
 
+<!-- users section -->
+
+<section>
+    <div class="container">
+        <div class="wrap">
+            <h2>Join Thousands of Productive Users</h2>
+        </div>
+        <div class="main">
+            <div>
+                <h1>50k</h1>
+                <p>Active users</p>
+            </div>
+            <div>
+                <h1>2M+</h1>
+                <p>Focus session</p>
+            </div>
+            <div>
+                <h1>95%</h1>
+                <p>Satisfication rate</p>
+            </div>
+            
+        </div>
+    </div>
+ </section>
+
+
 </body>
 </html>
