--- a/index.html
+++ b/index.html
@@ -150,5 +150,30 @@
     </div>
   </section>
 
+  <!-- form section -->
+   <section>
+    <div class="container">
+        <div class="contain">
+            <div><h1>Let's Get In <br>Touch</h1></div>
+            <div>
+                <form>
+                    <label for="email">Email</label>
+                    <input type="email" name="" id="email">
+                    <br>
+                    <label for="name">Name</label>
+                    <input type="name" name="" id="name">
+                    <br>
+                    <label for="">Message</label>
+
+                    <textarea name="message" id="message" cols="33" rows="5"></textarea>
+                    <button>Get in touch</button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+  </section> 
+
+
 </body>
 </html>
