--- a/index.html
+++ b/index.html
@@ -169,11 +169,28 @@
                     <button>Get in touch</button>
 
                 </form>
+
             </div>
         </div>
     </div>
   </section> 
 
+
+  <!-- footer section -->
+
+  <section>
+    <div class="container">
+        <div class="footer">
+            <h1>Hero</h1>
+            <p>Ready to elevate your online presence?contact us today <br>to discuss your project and discover how we can bring your vision</p>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">How it works</a>
+            <a href="#">Services</a>
+
+        </div>
+    </div>
+   </section>
 
 </body>
 </html>
